# continuum

./: .gitignore  AGENTS.md  Cargo.toml  INSPECTOR-CONTROL-SUMMARY.md  LSP_MIGRATION_GUIDE.md  MIGRATION.md  OPENCODE_LSP.md  PARSER_REFACTOR_STATUS.md  README.md  RUNNING_TERRA.md  TESTING-INSPECTOR.md  TESTS_BLOCKED.md  baseline.json  continuum.code-workspace  oldreference-project  opencode.json  run_terra.sh  rustc-ice-2026-01-23T13_01_29-1880373.txt  rustc-ice-2026-01-23T16_17_04-2355769.txt  rustc-ice-2026-01-23T16_18_14-2362572.txt  rustc-ice-2026-01-23T16_18_23-2363536.txt  rustc-ice-2026-01-23T16_18_51-2366207.txt
crates/cdsl-dap/: AGENTS.md  Cargo.toml
crates/cdsl-dap/src/: adapter.rs  lib.rs  main.rs  server.rs
crates/cdsl-lsp/: AGENTS.md  Cargo.toml
crates/cdsl-lsp/src/: formatter.rs  handlers.rs  helpers.rs  main.rs  symbols.rs
crates/continuum-cdsl/: AGENTS.md  Cargo.toml
crates/continuum-cdsl-ast/: Cargo.toml
crates/continuum-cdsl-ast/src/: error.rs  lib.rs
crates/continuum-cdsl-ast/src/ast/: block.rs  capability.rs  dag.rs  declaration.rs  expr.rs  expr_tests.rs  kernel.rs  mod.rs  node.rs  pipeline.rs  role.rs  structural.rs  untyped.rs  walk.rs  warmup.rs  world.rs
crates/continuum-cdsl-ast/src/foundation/: mod.rs  severity_conv.rs  types.rs
crates/continuum-cdsl-parser/: Cargo.toml
crates/continuum-cdsl-parser/src/: lib.rs
crates/continuum-cdsl-parser/src/parser/: blocks.rs  decl.rs  error.rs  expr.rs  helpers.rs  mod.rs  stream.rs  token_utils.rs  types.rs
crates/continuum-cdsl-parser/tests/: decl_roundtrip.rs  error_handling.rs  expr_precedence.rs  expr_special_forms.rs  integration_tests.rs  type_unit_expr.rs
crates/continuum-cdsl-parser/tests/integration/: assertion_metadata.cdsl  multiline_expr.cdsl  realistic_declarations.cdsl  simple.cdsl  simple_field.cdsl  simple_operator.cdsl  simple_signal.cdsl  span_tracking.cdsl
crates/continuum-cdsl-resolve/: Cargo.toml
crates/continuum-cdsl-resolve/src/: desugar.rs  error.rs  lib.rs
crates/continuum-cdsl-resolve/src/resolve/: attributes.rs  blocks.rs  blocks_tests.rs  capabilities.rs  coverage_gap_repro.rs  dependencies.rs  effects.rs  entities.rs  eras.rs  graph.rs  integrators.rs  mod.rs  names.rs  orphaned.rs  pipeline.rs  strata.rs  structure.rs  types.rs  units.rs  uses.rs  validation.rs
crates/continuum-cdsl/src/: desugar.rs  error.rs  lexer.rs  lib.rs  parser.rs  parser_chumsky.rs
crates/continuum-cdsl/src/ast/: block.rs  capability.rs  declaration.rs  expr.rs  kernel.rs  kernel.rs.backup  mod.rs  node.rs  pipeline.rs  role.rs  structural.rs  untyped.rs  walk.rs  warmup.rs  world.rs
crates/continuum-cdsl/src/compile/: mod.rs  tests.rs
crates/continuum-cdsl/src/foundation/: mod.rs  path.rs  phase.rs  span.rs  types.rs  unit.rs
crates/continuum-cdsl/src/parser/: blocks.rs  decl.rs  error.rs  expr.rs  mod.rs  stream.rs  types.rs
crates/continuum-cdsl/src/resolve/: audit_tests.rs  blocks.rs  capabilities.rs  coverage_gap_repro.rs  dependencies.rs  effects.rs  eras.rs  expr_typing.rs  graph.rs  integrators.rs  mod.rs  names.rs  pipeline.rs  strata.rs  structure.rs  types.rs  units.rs  uses.rs  validation.rs
crates/continuum-compiler/: Cargo.toml
crates/continuum-compiler/src/: lib.rs
crates/continuum-inspector/: Cargo.toml
crates/continuum-inspector/frontend/: index.html  package-lock.json  package.json  vite.config.ts
crates/continuum-inspector/frontend/src/: App.tsx  style.css
crates/continuum-inspector/src/: handlers.rs  helpers.rs  lib.rs  main.rs  process.rs  spawner.rs  state.rs  websocket.rs
crates/continuum-inspector/static/: index.html
crates/continuum-inspector/static/assets/: index-5RlfKfml.css  index-7bzK66ip.js  index-8lmNJ8Gk.css  index-B-d2adUE.js  index-B1T6YKWr.js  index-B8tIvSPi.css  index-BAU-cKez.js  index-BFNLNkOq.css  index-BFn3k82y.js  index-BGDT981P.js  index-BH4WgX_U.js  index-BHmdlKaQ.js  index-BmEhz3CK.js  index-Bzmp2lKo.js  index-C9yzfqaW.js  index-CA12dle1.js  index-Cau5lb6i.css  index-DCFVldzy.css  index-DW-zl7BG.js  index-Dfywicd3.js  index-Dh3DV-Xq.js  index-DhOY2mBw.css  index-Dy9awRUG.js  index-DzoEwta6.css  index-FavAytNy.css  index-QMdHPC0u.css  index-RIVnK5-R.css  index-eBGSIOjp.js  index-kRPzbveV.css
crates/continuum-inspector/tests/: process_management.rs
crates/continuum-run/: Cargo.toml  build.rs
crates/continuum-run/examples/: test_registry.rs
crates/continuum-run/src/: main.rs
crates/kernel-macros/: Cargo.toml  README.md
crates/kernel-macros/src/: lib.rs  parsing.rs  shared.rs  validation.rs
crates/kernel-macros/src/codegen/: constant.rs  mod.rs  runtime.rs  signature.rs  vectorized.rs
crates/kernel-macros/tests/: compile_fail.rs
crates/kernel-macros/tests/ui/: arity_mismatch.rs  arity_mismatch.stderr  array_length_invalid.rs  array_length_invalid.stderr  array_length_not_literal.rs  array_length_not_literal.stderr  invalid_constraint_tokens.rs  invalid_constraint_tokens.stderr  missing_namespace.rs  missing_namespace.stderr  partial_constraints.rs  partial_constraints.stderr  tuple_return.rs  tuple_return.stderr  unit_inference_with_constraints.rs  unit_inference_with_constraints.stderr  unsupported_return_type.rs  unsupported_return_type.stderr  variadic_with_constraints.rs  variadic_with_constraints.stderr
crates/kernels/dsl/: Cargo.toml  README.md
crates/kernels/dsl/examples/: debug_parse.rs  parse_terra.rs  test_individual.rs
crates/kernels/dsl/src/: ast.rs  lib.rs  loader.rs  math_consts.rs  validate.rs
crates/kernels/functions/: Cargo.toml  README.md
crates/kernels/functions/src/: compare.rs  dt.rs  (+11 more)
crates/kernels/gpu/: Cargo.toml
crates/kernels/ir/: Cargo.toml  README.md
crates/kernels/lens/: Cargo.toml
crates/kernels/runtime/: AGENTS.md  Cargo.toml  README.md
crates/tests/: Cargo.toml
crates/tests/src/: lib.rs
crates/tests/tests/: integration.rs
crates/tools/: Cargo.toml  README.md
crates/tools/src/: ipc_protocol.rs  ipc_server.rs  ipc_types.rs  lib.rs  request_handler_impls.rs  request_handlers.rs  run_world_intent.rs  sim_proxy.rs  sim_thread.rs  world_api.rs
(+494 files in other folders)
