[workspace]
resolver = "2"
members = [
    # New compiler
    "crates/continuum-cdsl",
    
    # Temporarily disabled during compiler rewrite (depend on deleted vm/ir/compiler crates):
    # "crates/cdsl-lsp",
    # "crates/cdsl-dap",
    # "crates/tools",
    # "crates/tests",
    # "crates/continuum-inspector",
    # "crates/kernels/runtime",
    # "crates/kernels/gpu",
    # "crates/kernels/lens",
    
    "crates/kernel-macros",
    "crates/kernel-registry",
    "crates/kernels/foundation",
    "crates/kernels/functions",
]

[workspace.package]
version = "0.1.0"
edition = "2024"

[profile.release]
lto = false
opt-level = 2
codegen-units = 16
