[workspace]
resolver = "2"
members = [
    # New compiler (modular)
    "crates/continuum-cdsl-ast",
    "crates/continuum-cdsl-lexer",
    "crates/continuum-cdsl-parser",
    "crates/continuum-cdsl-resolve",
    "crates/continuum-cdsl",
    "crates/continuum-kernel-types",
    
    # Re-enabled in Phase 15:
    "crates/tools",
    "crates/kernels/runtime",
    "crates/continuum-inspector",
    "crates/continuum-run",
    
    # Temporarily disabled during compiler rewrite:
    # "crates/cdsl-lsp",
    # "crates/cdsl-dap",
    # "crates/tests",
    # "crates/continuum-inspector",
    # "crates/kernels/gpu",
    # "crates/kernels/lens",
    
    "crates/kernel-macros",
    "crates/kernel-registry",
    "crates/kernels/foundation",
    "crates/kernels/functions",
]

[workspace.package]
version = "0.1.0"
edition = "2024"

[profile.release]
lto = false
opt-level = 2
codegen-units = 16
