[workspace]
resolver = "2"
members = [
    # New compiler (modular)
    "crates/continuum-cdsl-ast",
    "crates/continuum-cdsl-lexer",
    "crates/continuum-cdsl-parser",
    "crates/continuum-cdsl-resolve",
    "crates/continuum-cdsl",
    "crates/continuum-kernel-types",
    
    # Re-enabled in Phase 15:
    "crates/tools",
    "crates/kernels/runtime",
    "crates/continuum-inspector",
    "crates/continuum-run",
    
    # Temporarily disabled during compiler rewrite:
    "crates/cdsl-lsp",  # Re-enabled for migration work
    "crates/cdsl-dap",  # Re-enabled for migration work
    # "crates/tests",
    # "crates/continuum-inspector",
    # "crates/kernels/gpu",
    # "crates/kernels/lens",
    
    "crates/kernel-macros",
    "crates/kernel-registry",
    "crates/kernels/foundation",
    "crates/kernels/functions",
]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.lints.clippy]
# Deny unwrap in production code (allow in tests via crate-level override)
unwrap_used = "deny"

[profile.release]
lto = false
opt-level = 2
codegen-units = 16
