[package]
name = "cdsl-lsp"
version.workspace = true
edition.workspace = true

[[bin]]
name = "cdsl-lsp"
path = "src/main.rs"

[dependencies]
continuum-dsl = { version = "0.1.0", path = "../kernels/dsl" }
dashmap = "6.1.0"
tokio = { version = "1.49.0", features = ["rt-multi-thread", "io-std", "macros"] }
tower-lsp = "0.20.0"
