[package]
name = "cdsl-lsp"
version.workspace = true
edition.workspace = true

[[bin]]
name = "cdsl-lsp"
path = "src/main.rs"

[dependencies]
continuum-compiler = { version = "0.1.0", path = "../continuum-compiler" }
dashmap = "6.1.0"
tokio = { version = "1.49.0", features = ["rt-multi-thread", "io-std", "macros"] }
tower-lsp = "0.20.0"
walkdir = "2.5.0"
