[package]
name = "continuum-cdsl"
version.workspace = true
edition.workspace = true
description = "Continuum DSL compiler: lexer, parser, analyzer, bytecode, VM"
license = "MIT"

[dependencies]
continuum-foundation = { path = "../kernels/foundation" }
continuum-kernel-registry = { path = "../kernel-registry" }

# Parsing
logos = "0.14"
chumsky = "1.0.0-alpha.7"

# IR and analysis
indexmap = { version = "2", features = ["serde"] }
petgraph = "0.6"

# Serialization
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"

# Error handling
thiserror = "2"

[dev-dependencies]
# Testing utilities will go here
