[package]
name = "continuum-cdsl"
version.workspace = true
edition.workspace = true
description = "Continuum DSL compiler: lexer, parser, analyzer, bytecode, VM"
license = "MIT"

[dependencies]
continuum-foundation = { path = "../kernels/foundation" }
continuum-kernel-registry = { path = "../kernel-registry" }
continuum-kernel-types = { path = "../continuum-kernel-types" }

# Parsing
logos = "0.14"
chumsky = "1.0.0-alpha.7"

# IR and analysis
indexmap = { version = "2", features = ["serde"] }
petgraph = "0.6"
walkdir = "2.5"

# Serialization
serde = { version = "1.0", features = ["derive"] }
rmp-serde = "1.3"
bincode = "1.3"

# Error handling
thiserror = "2"

[dev-dependencies]
continuum-functions = { path = "../kernels/functions" }
continuum-runtime = { path = "../kernels/runtime" }
tempfile = "3.10"
# Testing utilities will go here
