[package]
name = "continuum-cdsl"
version.workspace = true
edition.workspace = true
description = "Continuum DSL compiler facade (re-exports modular sub-crates)"
license = "MIT"

[dependencies]
# Modular sub-crates (NO chumsky!)
continuum-cdsl-ast = { path = "../continuum-cdsl-ast" }
continuum-cdsl-lexer = { path = "../continuum-cdsl-lexer" }
continuum-cdsl-parser = { path = "../continuum-cdsl-parser" }
continuum-cdsl-resolve = { path = "../continuum-cdsl-resolve" }

# Foundation types
continuum-foundation = { path = "../kernels/foundation" }
continuum-kernel-types = { path = "../continuum-kernel-types" }

# Kernel functions - must be in main dependencies to populate KERNEL_SIGNATURES
continuum-functions = { path = "../kernels/functions" }

# For compile() function
walkdir = "2.5"
serde = { version = "1.0", features = ["derive"] }
rmp-serde = "1.3"
bincode = "1.3"
logos = "0.14"

[dev-dependencies]
continuum-runtime = { path = "../kernels/runtime" }
tempfile = "3.10"

[lints]
workspace = true
