[package]
name = "continuum-compiler"
version.workspace = true
edition.workspace = true

[dependencies]
continuum-dsl = { path = "../kernels/dsl" }
continuum-ir = { path = "../kernels/ir" }
thiserror = "2"
ariadne = "0.6.0"
chumsky = "0.12.0"
indexmap = "2"
tracing = "0.1.44"

[dev-dependencies]
tempfile = "3.24.0"
