[package]
name = "continuum_inspector"
version.workspace = true
edition.workspace = true

[dependencies]
# Web framework - Axum is the lightest with excellent WebSocket support
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async
futures = "0.3"

# Internal deps
continuum-tools = { path = "../tools" }

# CLI
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
anyhow = "1"
tempfile = "3"

[lints]
workspace = true
