[package]
name = "continuum-run"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "continuum-run"
path = "src/main.rs"

[dependencies]
continuum-tools = { path = "../tools" }
continuum-cdsl = { path = "../continuum-cdsl" }
continuum-runtime = { path = "../kernels/runtime" }
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[lints]
workspace = true
