[package]
name = "continuum-kernel-macros"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
continuum-kernel-types = { path = "../continuum-kernel-types" }
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full", "parsing"] }

[dev-dependencies]
trybuild = "1.0"
