[package]
name = "continuum-tests"
version.workspace = true
edition.workspace = true

[dependencies]
# Core crates needed for integration testing
continuum-dsl = { path = "../kernels/dsl" }
continuum-foundation = { path = "../kernels/foundation" }
continuum-functions = { path = "../kernels/functions" }
continuum-ir = { path = "../kernels/ir" }
continuum-runtime = { path = "../kernels/runtime" }
continuum-vm = { path = "../kernels/vm" }
indexmap = "2.13.0"

[dev-dependencies]
# No extra dev dependencies needed - all test infrastructure in workspace

# This crate exists only for integration tests
[[test]]
name = "integration"
path = "tests/integration.rs"
