[package]
name = "continuum-tools"
version.workspace = true
edition.workspace = true

[dependencies]
continuum-cdsl = { path = "../continuum-cdsl" }
continuum-foundation = { path = "../kernels/foundation" }
continuum-runtime = { path = "../kernels/runtime" }
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
