[package]
name = "continuum-tools"
version.workspace = true
edition.workspace = true

[dependencies]
continuum-cdsl = { path = "../continuum-cdsl" }
continuum-foundation = { path = "../kernels/foundation" }
continuum-runtime = { path = "../kernels/runtime" }
bincode = "1.3"
dirs = "5.0"
hex = "0.4"
indexmap = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
crossbeam-channel = "0.5"
parking_lot = "0.12"

[lints]
workspace = true
