[package]
name = "continuum-dsl"
version.workspace = true
edition.workspace = true

[dependencies]
ariadne = "0.6.0"
chumsky = "1.0.0-alpha.8"
continuum-kernel-registry = { version = "0.1.0", path = "../../kernel-registry" }
logos = "0.16.0"

[dev-dependencies]
continuum-functions = { path = "../functions" }
tempfile = "3.24.0"
