[package]
name = "continuum-gpu"
version = "0.1.0"
edition = "2024"
description = "GPU compute offload for Continuum field emission"
license = "MIT"

[dependencies]
# Internal dependencies
continuum-runtime = { path = "../runtime" }
continuum-foundation = { path = "../foundation" }

# Utilities
indexmap = "2"
bytemuck = { version = "1", features = ["derive"] }
thiserror = "2"
tracing = "0.1"
wgpu = { version = "28.0.0", optional = true }
pollster = { version = "0.4", optional = true }

[features]
default = []
# Enable GPU support (requires wgpu)
gpu = ["dep:wgpu", "dep:pollster"]
