[package]
name = "continuum-ir"
version.workspace = true
edition.workspace = true

[dependencies]
continuum-dsl = { path = "../dsl" }
continuum-foundation = { path = "../foundation" }
continuum-functions = { path = "../functions" }
continuum-kernel-registry = { path = "../../kernel-registry" }
continuum-lens = { path = "../lens" }
continuum-runtime = { path = "../runtime" }
continuum-vm = { path = "../vm" }
thiserror = "2"
indexmap = { version = "2", features = ["serde"] }
tracing = "0.1.44"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
