[package]
name = "continuum-lens"
version = "0.1.0"
edition = "2024"
description = "Observer boundary: field ingest + history storage"
license = "MIT"

[dependencies]
continuum-runtime = { path = "../runtime" }
indexmap = "2"
thiserror = "2"
continuum-gpu = { path = "../gpu", optional = true }

[features]
default = []
gpu = ["dep:continuum-gpu"]
