[package]
name = "continuum-lens"
version = "0.1.0"
edition = "2024"
description = "Observer boundary: field ingest + history storage"
license = "MIT"

[dependencies]
continuum-foundation = { path = "../foundation" }
indexmap = "2"
thiserror = "2"
continuum-gpu = { path = "../gpu", optional = true }
bytemuck = { version = "1", features = ["derive"], optional = true }
wgpu = { version = "28.0.0", optional = true }

[features]
default = []
gpu = ["dep:continuum-gpu", "dep:bytemuck", "dep:wgpu"]
