[package]
name = "continuum-runtime"
version.workspace = true
edition.workspace = true

[dependencies]
thiserror = "2"
indexmap = { version = "2", features = ["serde"] }
rayon = "1"
continuum-foundation = { version = "0.1.0", path = "../foundation" }
continuum-cdsl = { version = "0.1.0", path = "../../continuum-cdsl" }
continuum-kernel-types = { version = "0.1.0", path = "../../continuum-kernel-types" }
continuum-kernel-registry = { version = "0.1.0", path = "../../kernel-registry" }
tracing = "0.1.44"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
thread_local = "1.1.9"
zstd = { version = "0.13.3", features = ["legacy"] }
chrono = "0.4"

[dev-dependencies]
criterion = { version = "0.8.1", features = ["html_reports"] }
continuum-functions = { version = "0.1.0", path = "../functions" }

[[bench]]
name = "chunking_strategies"
harness = false

[lints]
workspace = true
